feat(chat): implement private messaging & fix flyway migrations
1. Fix Flyway V4/V5 naming convention (single to double underscore). 2. Implement PrivateChat entity, service, and controller with WebSocket support. 3. Refactor QueryWrapper to LambdaQueryWrapper to fix SQL column mapping errors.